Fix String.formatted() compatibility issues
- Replace String.formatted() calls with String.format() for better compatibility
- Keep text blocks and other Java 21 features that work correctly
- Maintain all modernization improvements while ensuring compilation success

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>